<resources>
    <string name="app_name">Smart Restaurant Mobile</string>
    <string name="app_name_sm">Smart Restaurant</string>
    <string name="reserve_a_table">Reserve a Table</string>
    <string name="login_here">Login here</string>
    <string name="login_failed">Login Failed!</string>
    <string name="please_fill_all_the_fields">Please fill all the fields!</string>
    <string name="profile">Profile</string>
    <string name="name">Name</string>
    <string name="logout">Logout</string>
    <string name="are_you_sure_logout">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="back_to_login">Back to login</string>
    <string name="register_here">Register here</string>
    <string name="phone_number">Phone number (07********)</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="Register">Register</string>
    <string name="user_is_exists">Phone number already exists!</string>
    <string name="home">Home</string>
    <string name="password_confrimation_should_be_similer_to_the_password">Password confirmation should be similer to the password</string>
    <string name="please_enter_the_number_of_seats_to_find_the_table_availability">Please enter the number of seats to find the table availability</string>
    <string name="please_enter_the_number_of_seats">Please enter the expected number of seats!</string>
    <string name="number_of_seats">Number of seats</string>
    <string name="apply">Apply</string>
    <string name="past_orders">Past Orders</string>
    <string name="please_select_a_table_for_the_reservation">Please select a table for the reservation</string>
    <string name="no_table_is_avilable">There is no table available for the requested number of seats!</string>
    <string name="somthing_went_wrong">Something went wrong!</string>
    <string name="do_you_want_to_reserve_this_table">Do you want to reserve this table for next 30 minutes?</string>
    <string name="no">No</string>
    <string name="there_is_not_ongoing_reservation">There is no ongoing reservation!</string>
    <string name="on_goin_reservation">You have an ongoing reservation</string>
    <string name="expiry_time">Expiry Time</string>
    <string name="table_number">Table number</string>
    <string name="you_have_an_on_going_reservation">You have placed a reservation!</string>
    <string name="please_reach_the_restaurant_before_the_expiry_time">Please reach the restaurant before the expiry time!</string>
    <string name="you_have_reached_the_restaurant">You have reached the restaurant!</string>
    <string name="offers">Offers</string>
    <string name="order_id">Order Id</string>
    <string name="amount">Amount</string>
    <string name="date_time">Date/Time</string>
    <string name="no_items_available">No Orders available!</string>
    <string name="invoice">Invoice</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="total">TOTAL</string>
    <string name="do_you_realy_want_tologout">Do you really want to logout?</string>
    <string name="do_you_realy_want_to_cancel_this_reservation">Do you really want to cancel this reservation?</string>
    <string name="cancel_the_reservation">Cancel the reservation</string>
    <string name="gross_amount">Gross amount</string>
    <string name="net_amount">NET AMOUNT</string>
    <string name="discount">Discount</string>
</resources>