<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".view.activity.LoginActivity">

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/transparent_black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />


    <EditText
        android:id="@+id/etName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="@string/name"
        android:textColor="@color/white"
        android:textColorHint="@color/light_gray"
        android:inputType="textPersonName"
        android:textSize="@dimen/text_size_medium"
        app:layout_constraintBottom_toTopOf="@+id/etPhoneNumber"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view" />

    <EditText
        android:id="@+id/etPhoneNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:textColor="@color/white"
        android:ems="10"
        android:hint="@string/phone_number"
        android:inputType="number"
        android:maxLength="10"
        android:textColorHint="@color/light_gray"
        android:textSize="@dimen/text_size_medium"
        app:layout_constraintBottom_toTopOf="@+id/etPassword"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp"
        app:layout_constraintGuide_percent="0.6"/>

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="@color/light_gray"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_medium"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="@+id/etPhoneNumber"
        app:layout_constraintStart_toStartOf="@+id/etPhoneNumber"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <EditText
        android:id="@+id/etConfirmPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/light_gray"
        android:textSize="@dimen/text_size_medium"
        app:layout_constraintEnd_toEndOf="@+id/etPhoneNumber"
        app:layout_constraintStart_toStartOf="@+id/etPhoneNumber"
        app:layout_constraintTop_toBottomOf="@+id/etPassword" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@color/theme_color"
        android:fontFamily="@font/roboto_slab"
        android:padding="@dimen/button_padding"
        android:text="@string/Register"
        android:textSize="@dimen/text_size_medium"
        app:layout_constraintEnd_toEndOf="@+id/etPassword"
        app:layout_constraintStart_toStartOf="@+id/etPassword"
        app:layout_constraintTop_toBottomOf="@+id/etConfirmPassword" />

    <TextView
        android:id="@+id/tvBackToLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/roboto_slab"
        android:text="@string/back_to_login"
        android:textColor="@color/white"
        android:clickable="true"
        app:layout_constraintEnd_toEndOf="@+id/btnLogin"
        app:layout_constraintStart_toStartOf="@+id/btnLogin"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_slab"
        android:text="@string/app_name"
        android:textSize="@dimen/textview_large_size"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/tvTableNumber"
        app:layout_constraintEnd_toEndOf="@+id/etPhoneNumber"
        app:layout_constraintStart_toStartOf="@+id/etPhoneNumber"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTableNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:fontFamily="@font/roboto_slab"
        android:text="@string/register_here"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_medium"
        app:layout_constraintBottom_toTopOf="@+id/etName"
        app:layout_constraintEnd_toEndOf="@+id/etPhoneNumber"
        app:layout_constraintStart_toStartOf="@+id/etPhoneNumber" />

</androidx.constraintlayout.widget.ConstraintLayout>
