<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="3dp"
    android:background="@color/transparent_black"
    android:gravity="center_vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvOrderId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_id"
            android:textSize="@dimen/text_size_large"
            android:textColor="@color/white"
            android:fontFamily="@font/roboto_slab"/>

        <TextView
            android:id="@+id/tvAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/amount"
            android:textSize="@dimen/text_size_large"
            android:textColor="@color/white"
            android:fontFamily="@font/roboto_slab"/>


        <TextView
            android:id="@+id/tvDateTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/date_time"
            android:textSize="@dimen/text_size_large"
            android:textColor="@color/white"
            android:fontFamily="@font/roboto_slab"/>
    </LinearLayout>

    <ImageView
        android:id="@+id/ivMore"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        app:srcCompat="@drawable/ic_right_arrow" />

</RelativeLayout>