<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        app:titleTextColor="@color/white" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparent_black"
        android:fontFamily="@font/roboto_slab"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/please_enter_the_number_of_seats_to_find_the_table_availability"
        android:textColor="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparent_black"
        android:gravity="center"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/etNumberOfSeats"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/number_of_seats"
            android:inputType="number"
            android:textColor="@color/white"
            android:textColorHint="@color/light_gray"
            android:textSize="@dimen/text_size_medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:padding="5dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        <Button
            android:id="@+id/btnApply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/drawable_button_background"
            android:text="@string/apply"
            android:textSize="@dimen/text_size_medium" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvReservationNote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparent_black"
        android:text="@string/please_select_a_table_for_the_reservation"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_medium"
        android:layout_marginTop="10dp"
        android:padding="10dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp" />

</LinearLayout>