<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".view.activity.MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        app:titleTextColor="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/transparent_black"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="top"
                android:background="@color/transparent_black"
                android:gravity="center_vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/tvName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_large"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:fontFamily="@font/roboto_slab_bold"/>

                <ImageView
                    android:id="@+id/ivQuite"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_quite"
                    android:layout_margin="10dp"/>
            </LinearLayout>

            <TextView
                android:id="@+id/tvNoReservation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/light_gray"
                android:fontFamily="@font/roboto_slab"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/there_is_not_ongoing_reservation"
                android:textColor="@color/red"
                android:textSize="@dimen/textview_large_3_size"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/llWrapper"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/light_gray"
                    android:fontFamily="@font/roboto_slab"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/on_goin_reservation"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/textview_large_2_size" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/roboto_slab"
                        android:text="@string/expiry_time"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_medium" />

                    <TextView
                        android:id="@+id/tvExpiryTime"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/roboto_slab"
                        android:text="@string/expiry_time"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_medium" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/roboto_slab"
                        android:text="@string/table_number"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_medium" />

                    <TextView
                        android:id="@+id/tvTableNumber"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/roboto_slab"
                        android:text="@string/expiry_time"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_medium" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/roboto_slab"
                        android:text="@string/number_of_seats"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_medium" />

                    <TextView
                        android:id="@+id/tvNumberOfSeats"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/roboto_slab"
                        android:text="@string/expiry_time"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_medium" />


                </LinearLayout>

                <TextView
                    android:id="@+id/tvReservationNotification"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/roboto_slab"
                    android:padding="10dp"
                    android:text="@string/please_reach_the_restaurant_before_the_expiry_time"
                    android:textColor="@color/red"
                    android:textSize="@dimen/text_size_medium" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:elevation="10dp"
                    app:cardBackgroundColor="@color/theme_color"
                    app:cardCornerRadius="10dp">

                    <LinearLayout
                        android:id="@+id/llReserveTable"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:src="@drawable/ic_table" />

                        <TextView
                            android:id="@+id/tvReservation"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:fontFamily="@font/roboto_slab_bold"
                            android:gravity="center"
                            android:text="@string/reserve_a_table"
                            android:textColor="@color/white"
                            android:textSize="@dimen/text_size_medium" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:elevation="10dp"
                    app:cardBackgroundColor="@color/theme_color"
                    app:cardCornerRadius="10dp">

                    <LinearLayout
                        android:id="@+id/llPastOrders"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:src="@drawable/ic_orders" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:fontFamily="@font/roboto_slab_bold"
                            android:gravity="center"
                            android:text="@string/past_orders"
                            android:textColor="@color/white"
                            android:textSize="@dimen/text_size_medium" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:elevation="10dp"
                    android:visibility="gone"
                    app:cardBackgroundColor="@color/theme_color"
                    app:cardCornerRadius="10dp">

                    <LinearLayout
                        android:id="@+id/llOffers"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:src="@drawable/ic_offerse" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:fontFamily="@font/roboto_slab_bold"
                            android:gravity="center"
                            android:text="@string/offers"
                            android:textColor="@color/white"
                            android:textSize="@dimen/text_size_medium" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>


        </LinearLayout>

    </LinearLayout>
</LinearLayout>